--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!--<app-nav-bar (featureSelected)="onNavigate($event)"></app-nav-bar>
+<app-nav-bar (featureSelected)="onNavigate($event)"></app-nav-bar>
 <div class="container-fluid">
   <app-body-section6 (featureSelected)="onNavigate($event)" *ngIf="loadedFeature === 'sec6'"></app-body-section6>
   <app-body-section5 *ngIf="loadedFeature === 'sec5'"></app-body-section5>
@@ -11,5 +11,4 @@
 <div class="container-fluid">
   <app-banner-body (featureSelected)="onNavigate($event)"></app-banner-body>
   <app-foot-bar></app-foot-bar>
-</div>-->
-<p>Pushed to develop</p>
+</div>
